--- a/contact.html
+++ b/contact.html
@@ -36,6 +36,35 @@
     </div>
   </nav>
 
+  <!-- Contact Header -->
+  <section class="contact-header">
+    <div class="contact-header-container">
+      <h1 class="info-highlight">Contact Us</h1>
+      <p class="contact-subtitle">
+        Get in touch with the Ankropix team for any inquiries or support.
+      </p>
+    </div>
+  </section>
+
+    <!-- Contact Section -->
+  <section class="contact-section">
+    <div class="contact-container">
+      <form class="contact-form">
+        <label for="name">Name</label>
+        <input type="text" id="name" name="name" required />
+
+        <label for="email">Email</label>
+        <input type="email" id="email" name="email" required />
+
+        <label for="message">Message</label>
+        <textarea id="message" name="message" rows="5" required></textarea>
+        <div class="info-button">
+          <button type="submit" class="info-btn">SEND MESSAGE</button>
+        </div>
+      </form>
+    </div>
+  </section>
+
   <!-- Footer -->
   <footer class="footer">
     <div class="footer-container">
