--- a/services.html
+++ b/services.html
@@ -35,6 +35,46 @@
       </ul>
     </div>
   </nav>
+  <!-- Services Section -->
+    <section class="contact-header">
+    <div class="contact-header-container">
+      <h1 class="info-highlight">Services</h1>
+      <p class="contact-subtitle">
+        Explore the wide range of services offered by Ankropix to enhance your gaming experience.
+      </p>
+    </div>
+  </section>
+
+  <section class="services-detailed">
+        <div class="services-container">
+            <div class="service-detail">
+                <div class="service-detail-icon">🎮</div>
+                <div class="service-detail-content">
+                    <h2>Minecraft Server Hosting</h2>
+                    <p>Experience the ultimate Minecraft server hosting with our powerful and reliable infrastructure. Whether you're running a small server for friends or a large community, we've got you covered.</p>
+                    <a href="pricing.html" class="info-btn">View Plans</a>
+                </div>
+            </div>
+            
+            <div class="service-detail">
+                <div class="service-detail-icon">🤖</div>
+                <div class="service-detail-content">
+                    <h2>Discord Bot Hosting</h2>
+                    <p>Keep your Discord bots online 24/7 with our reliable bot hosting service. Perfect for music bots, moderation bots, and custom applications.</p>
+                    <a href="pricing.html" class="info-btn">Get Started</a>
+                </div>
+            </div>
+            
+            <div class="service-detail">
+                <div class="service-detail-icon">☁️</div>
+                <div class="service-detail-content">
+                    <h2>VPS Hosting</h2>
+                    <p>Full control with our Virtual Private Servers. Perfect for advanced users who need flexibility and customization options.</p>
+                    <a href="pricing.html" class="info-btn">Choose Plan</a>
+                </div>
+            </div>
+        </div>
+    </section>
   
 
   <!-- Footer -->
