Footer fixed and pricing page

--- a/contact.html
+++ b/contact.html
@@ -1,76 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Ankropix</title>
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="icon" type="image/x-icon" href="/images/icon.png" />
+    <!-- Favicon for the page-->
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <title>Ankropix</title>
-  <link rel="stylesheet" href="css/styles.css" />
-  <link rel="icon" type="image/x-icon" href="/images/icon.png" />
-  <!-- Favicon for the page-->
-</head>
+  <body>
+    <!-- Navigation Bar -->
+    <nav class="navbar">
+      <div class="navbar-container">
+        <a href="index.html" class="nav-logo">
+          <span>Ankropix</span>
+        </a>
+        <ul class="nav-links">
+          <li>
+            <a href="index.html" class="nav-link active">HOME</a>
+          </li>
+          <li>
+            <a href="services.html" class="nav-link">SERVICES</a>
+          </li>
+          <li>
+            <a href="pricing.html" class="nav-link">PRICING</a>
+          </li>
+          <li>
+            <a href="about.html" class="nav-link">ABOUT</a>
+          </li>
+          <li>
+            <a href="contact.html" class="nav-link-contact">CONTACT US</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
 
-<body>
-  <!-- Navigation Bar -->
-  <nav class="navbar">
-    <div class="navbar-container">
-      <a href="index.html" class="nav-logo">
-        <span class="logo-text">Ankropix</span>
-      </a>
-      <ul class="nav-links">
-        <li>
-          <a href="index.html" class="nav-link active">HOME</a>
-        </li>
-        <li>
-          <a href="services.html" class="nav-link">SERVICES</a>
-        </li>
-        <li>
-          <a href="pricing.html" class="nav-link">PRICING</a>
-        </li>
-        <li>
-          <a href="about.html" class="nav-link">ABOUT</a>
-        </li>
-        <li>
-          <a href="contact.html" class="nav-link-contact">CONTACT US</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-
-  <!-- Contact Header -->
-  <section class="contact-header">
-    <div class="contact-header-container">
-      <h1 class="info-highlight">Contact Us</h1>
-      <p class="contact-subtitle">
-        Get in touch with the Ankropix team for any inquiries or support.
-      </p>
-    </div>
-  </section>
+    <!-- Contact Header -->
+    <section class="contact-header">
+      <div class="contact-header-container">
+        <h1 class="info-highlight">Contact Us</h1>
+        <p class="contact-subtitle">
+          Get in touch with the Ankropix team for any inquiries or support.
+        </p>
+      </div>
+    </section>
 
     <!-- Contact Section -->
-  <section class="contact-section">
-    <div class="contact-container">
-      <form class="contact-form">
-        <label for="name">Name</label>
-        <input type="text" id="name" name="name" required />
+    <section class="contact-section">
+      <div>
+        <form class="contact-form">
+          <label for="name">Name</label>
+          <input type="text" id="name" name="name" required />
 
-        <label for="email">Email</label>
-        <input type="email" id="email" name="email" required />
+          <label for="email">Email</label>
+          <input type="email" id="email" name="email" required />
 
-        <label for="message">Message</label>
-        <textarea id="message" name="message" rows="5" required></textarea>
-        <div class="info-button">
-          <button type="submit" class="info-btn">SEND MESSAGE</button>
-        </div>
-      </form>
-    </div>
-  </section>
+          <label for="message">Message</label>
+          <textarea id="message" name="message" rows="5" required></textarea>
+          <div class="info-button">
+            <button type="submit" class="info-btn">SEND MESSAGE</button>
+          </div>
+        </form>
+      </div>
+    </section>
 
-  <!-- Footer -->
-  <footer class="footer">
-    <div class="footer-container">
-      <p>&copy; 2025 Ankropix. All rights reserved.</p>
-      <p>Built with ❤️ for gamers</p>
-    </div>
-</body>
-
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="footer-container">
+        <p>&copy; 2025 Ankropix. All rights reserved.</p>
+        <p>Built with ❤️ for gamers</p>
+      </div>
+    </footer>
+  </body>
 </html>
