--- a/index.html
+++ b/index.html
@@ -1,85 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Ankropix</title>
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="icon" type="image/x-icon" href="/images/icon.png" />
+    <!-- Favicon for the page-->
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <title>Ankropix</title>
-  <link rel="stylesheet" href="css/styles.css" />
-  <link rel="icon" type="image/x-icon" href="/images/icon.png" />
-  <!-- Favicon for the page-->
-</head>
-
-<body>
-  <!-- Navigation Bar -->
-  <nav class="navbar">
-    <div class="navbar-container">
-      <a href="index.html" class="nav-logo">
-        <span class="logo-text">Ankropix</span>
-      </a>
-      <ul class="nav-links">
-        <li>
-          <a href="index.html" class="nav-link active">HOME</a>
-        </li>
-        <li>
-          <a href="services.html" class="nav-link">SERVICES</a>
-        </li>
-        <li>
-          <a href="pricing.html" class="nav-link">PRICING</a>
-        </li>
-        <li>
-          <a href="about.html" class="nav-link">ABOUT</a>
-        </li>
-        <li>
-          <a href="contact.html" class="nav-link-contact">CONTACT US</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-
-  <!-- Info Section -->
-  <section class="info-section">
-    <div class="info-container">
-      <h1 class="info-title">
-        <span class="info-highlight">Premium</span> Server Hosting
-      </h1>
-      <p class="info-description">
-        Experience top-tier server hosting with Ankropix. Reliable,
-        high-performance, Starting at just $5/month.
-      </p>
-      <div class="info-button">
-        <a href="services.html" class="info-btn">EXPLORE SERVICES</a>
+  <body>
+    <!-- Navigation Bar -->
+    <nav class="navbar">
+      <div class="navbar-container">
+        <a href="index.html" class="nav-logo">
+          <span>Ankropix</span>
+        </a>
+        <ul class="nav-links">
+          <li>
+            <a href="index.html" class="nav-link active">HOME</a>
+          </li>
+          <li>
+            <a href="services.html" class="nav-link">SERVICES</a>
+          </li>
+          <li>
+            <a href="pricing.html" class="nav-link">PRICING</a>
+          </li>
+          <li>
+            <a href="about.html" class="nav-link">ABOUT</a>
+          </li>
+          <li>
+            <a href="contact.html" class="nav-link-contact">CONTACT US</a>
+          </li>
+        </ul>
       </div>
-    </div>
-  </section>
+    </nav>
 
-  <!-- Stats section -->
-  <section class="stats-section">
-    <div class="container">
-      <h2 class="stats-title">Ankropix in Numbers</h2>
-      <div class="stats-grid">
-        <div class="stat-card">
-          <div class="stat-icon">🎮</div>
-          <div class="stat-number">3645</div>
-          <div class="stat-label">Active Players</div>
-        </div>
-        <div class="stat-card">
-          <div class="stat-icon">⚡</div>
-          <div class="stat-number">99</div>
-          <div class="stat-label">% Uptime</div>
-        </div>
-        <div class="stat-card">
-          <div class="stat-icon">🌐</div>
-          <div class="stat-number">6</div>
-          <div class="stat-label">Server Locations</div>
+    <!-- Info Section -->
+    <section class="info-section">
+      <div class="info-container">
+        <h1 class="info-title">
+          <span class="info-highlight">Premium</span> Server Hosting
+        </h1>
+        <p class="info-description">
+          Experience top-tier server hosting with Ankropix. Reliable,
+          high-performance, Starting at just $5/month.
+        </p>
+        <div class="info-button">
+          <a href="services.html" class="info-btn">EXPLORE SERVICES</a>
         </div>
       </div>
-    </div>
-  </section>
-  <footer class="footer">
-    <div class="footer-container">
-      <p>&copy; 2025 Ankropix. All rights reserved.</p>
-      <p>Built with ❤️ for gamers</p>
-    </div>
-</body>
+    </section>
 
+    <!-- Stats section -->
+    <section class="stats-section">
+      <div>
+        <h2 class="stats-title">Ankropix in Numbers</h2>
+        <div class="stats-grid">
+          <div class="stat-card">
+            <div class="stat-icon">🎮</div>
+            <div class="stat-number">3645</div>
+            <div class="stat-label">Active Players</div>
+          </div>
+          <div class="stat-card">
+            <div class="stat-icon">⚡</div>
+            <div class="stat-number">99</div>
+            <div class="stat-label">% Uptime</div>
+          </div>
+          <div class="stat-card">
+            <div class="stat-icon">🌐</div>
+            <div class="stat-number">6</div>
+            <div class="stat-label">Server Locations</div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer class="footer">
+      <div class="footer-container">
+        <p>&copy; 2025 Ankropix. All rights reserved.</p>
+        <p>Built with ❤️ for gamers</p>
+      </div>
+    </footer>
+  </body>
 </html>
