--- a/pricing.html
+++ b/pricing.html
@@ -14,17 +14,17 @@
   <nav class="navbar">
     <div class="navbar-container">
       <a href="index.html" class="nav-logo">
-        <span class="logo-text">Ankropix</span>
+        <span >Ankropix</span>
       </a>
       <ul class="nav-links">
         <li>
-          <a href="index.html" class="nav-link active">HOME</a>
+          <a href="index.html" class="nav-link">HOME</a>
         </li>
         <li>
           <a href="services.html" class="nav-link">SERVICES</a>
         </li>
         <li>
-          <a href="pricing.html" class="nav-link">PRICING</a>
+          <a href="pricing.html" class="nav-link active">PRICING</a>
         </li>
         <li>
           <a href="about.html" class="nav-link">ABOUT</a>
@@ -36,12 +36,49 @@
     </div>
   </nav>
 
+  <!-- Pricing Header -->
+   <section class="contact-header">
+    <div class="contact-header-container">
+      <h1 class="info-highlight">Our Pricing</h1>
+      <p class="contact-subtitle">
+        Choose the perfect plan for your gaming needs.
+      </p>
+    </div>
+  </section>
+
+  <!-- Pricing Section -->
+  <section">
+    <div class="pricing-container">
+      <div class="pricing-card">
+        <h2 class="pricing-title">Basic Plan</h2>
+        <p class="pricing-price">$5/month</p>
+        <ul class="pricing-features">
+          <li class="pricing-feature">1 GB RAM</li>
+          <li class="pricing-feature">10 GB Storage</li>
+          <li class="pricing-feature">Basic Support</li>
+        </ul>
+        <a href="contact.html" class="info-btn">GET STARTED</a>
+      </div>
+      <div class="pricing-card">
+        <h2 class="pricing-title">Pro Plan</h2>
+        <p class="pricing-price">$15/month</p>
+        <ul class="pricing-features">
+          <li class="pricing-feature">4 GB RAM</li>
+          <li class="pricing-feature">50 GB Storage</li>
+          <li class="pricing-feature">Priority Support</li>
+        </ul>
+        <a href="contact.html" class="info-btn">GET STARTED</a>
+      </div>
+    </div>
+  </section>
+
   <!-- Footer -->
   <footer class="footer">
     <div class="footer-container">
       <p>&copy; 2025 Ankropix. All rights reserved.</p>
       <p>Built with ❤️ for gamers</p>
     </div>
+  </footer>
 </body>
 
 </html>
