--- a/services.html
+++ b/services.html
@@ -1,88 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Ankropix</title>
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="icon" type="image/x-icon" href="/images/icon.png" />
+    <!-- Favicon for the page-->
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <title>Ankropix</title>
-  <link rel="stylesheet" href="css/styles.css" />
-  <link rel="icon" type="image/x-icon" href="/images/icon.png" />
-  <!-- Favicon for the page-->
-</head>
-
-<body>
-  <!-- Navigation Bar -->
-  <nav class="navbar">
-    <div class="navbar-container">
-      <a href="index.html" class="nav-logo">
-        <span class="logo-text">Ankropix</span>
-      </a>
-      <ul class="nav-links">
-        <li>
-          <a href="index.html" class="nav-link active">HOME</a>
-        </li>
-        <li>
-          <a href="services.html" class="nav-link">SERVICES</a>
-        </li>
-        <li>
-          <a href="pricing.html" class="nav-link">PRICING</a>
-        </li>
-        <li>
-          <a href="about.html" class="nav-link">ABOUT</a>
-        </li>
-        <li>
-          <a href="contact.html" class="nav-link-contact">CONTACT US</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-  <!-- Services Section -->
+  <body>
+    <!-- Navigation Bar -->
+    <nav class="navbar">
+      <div class="navbar-container">
+        <a href="index.html" class="nav-logo">
+          <span>Ankropix</span>
+        </a>
+        <ul class="nav-links">
+          <li>
+            <a href="index.html" class="nav-link">HOME</a>
+          </li>
+          <li>
+            <a href="services.html" class="nav-link active">SERVICES</a>
+          </li>
+          <li>
+            <a href="pricing.html" class="nav-link">PRICING</a>
+          </li>
+          <li>
+            <a href="about.html" class="nav-link">ABOUT</a>
+          </li>
+          <li>
+            <a href="contact.html" class="nav-link-contact">CONTACT US</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <!-- Services Section -->
     <section class="contact-header">
-    <div class="contact-header-container">
-      <h1 class="info-highlight">Services</h1>
-      <p class="contact-subtitle">
-        Explore the wide range of services offered by Ankropix to enhance your gaming experience.
-      </p>
-    </div>
-  </section>
-
-  <section class="services-detailed">
-        <div class="services-container">
-            <div class="service-detail">
-                <div class="service-detail-icon">🎮</div>
-                <div class="service-detail-content">
-                    <h2>Minecraft Server Hosting</h2>
-                    <p>Experience the ultimate Minecraft server hosting with our powerful and reliable infrastructure. Whether you're running a small server for friends or a large community, we've got you covered.</p>
-                    <a href="pricing.html" class="info-btn">View Plans</a>
-                </div>
-            </div>
-            
-            <div class="service-detail">
-                <div class="service-detail-icon">🤖</div>
-                <div class="service-detail-content">
-                    <h2>Discord Bot Hosting</h2>
-                    <p>Keep your Discord bots online 24/7 with our reliable bot hosting service. Perfect for music bots, moderation bots, and custom applications.</p>
-                    <a href="pricing.html" class="info-btn">Get Started</a>
-                </div>
-            </div>
-            
-            <div class="service-detail">
-                <div class="service-detail-icon">☁️</div>
-                <div class="service-detail-content">
-                    <h2>VPS Hosting</h2>
-                    <p>Full control with our Virtual Private Servers. Perfect for advanced users who need flexibility and customization options.</p>
-                    <a href="pricing.html" class="info-btn">Choose Plan</a>
-                </div>
-            </div>
-        </div>
+      <div class="contact-header-container">
+        <h1 class="info-highlight">Services</h1>
+        <p class="contact-subtitle">
+          Explore the wide range of services offered by Ankropix to enhance your
+          gaming experience.
+        </p>
+      </div>
     </section>
-  
 
-  <!-- Footer -->
-  <footer class="footer">
-    <div class="footer-container">
-      <p>&copy; 2025 Ankropix. All rights reserved.</p>
-      <p>Built with ❤️ for gamers</p>
-    </div>
-</body>
+    <section>
+      <div class="services-container">
+        <div class="service-detail">
+          <div class="service-detail-icon">🎮</div>
+          <div class="service-detail-content">
+            <h2>Minecraft Server Hosting</h2>
+            <p>
+              Experience the ultimate Minecraft server hosting with our powerful
+              and reliable infrastructure. Whether you're running a small server
+              for friends or a large community, we've got you covered.
+            </p>
+            <a href="pricing.html" class="info-btn">View Plans</a>
+          </div>
+        </div>
 
+        <div class="service-detail">
+          <div class="service-detail-icon">🤖</div>
+          <div class="service-detail-content">
+            <h2>Discord Bot Hosting</h2>
+            <p>
+              Keep your Discord bots online 24/7 with our reliable bot hosting
+              service. Perfect for music bots, moderation bots, and custom
+              applications.
+            </p>
+            <a href="pricing.html" class="info-btn">Get Started</a>
+          </div>
+        </div>
+
+        <div class="service-detail">
+          <div class="service-detail-icon">☁️</div>
+          <div class="service-detail-content">
+            <h2>VPS Hosting</h2>
+            <p>
+              Full control with our Virtual Private Servers. Perfect for
+              advanced users who need flexibility and customization options.
+            </p>
+            <a href="pricing.html" class="info-btn">Choose Plan</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="footer-container">
+        <p>&copy; 2025 Ankropix. All rights reserved.</p>
+        <p>Built with ❤️ for gamers</p>
+      </div>
+    </footer>
+  </body>
 </html>
