--- a/about.html
+++ b/about.html
@@ -35,11 +35,53 @@
       </div>
     </nav>
 
+    <!-- About Header -->
+    <section class="contact-header">
+      <div class="contact-header-container">
+        <h1 class="info-highlight">About Us</h1>
+        <p class="contact-subtitle">
+          Learn more about the Ankropix team and our mission.
+        </p>
+      </div>
+    </section>
+
+    <!-- About Section -->
+    <section>
+      <div class="about-container">
+        <h2>Our Mission</h2>
+        <p>
+          At Ankropix, our mission is to provide gamers with the best server
+          hosting experience. We are dedicated to delivering reliable,
+          high-performance servers that enhance your gaming adventures.
+        </p>
+
+        <h2>Our Team</h2>
+        <p>
+          Our team is composed of passionate gamers and experienced IT
+          professionals who understand the needs of the gaming community. We
+          work tirelessly to ensure our services exceed your expectations.
+        </p>
+
+        <h2>Our Values</h2>
+        <p>
+          We believe in transparency, customer satisfaction, and continuous
+          improvement. We are committed to providing top-notch support and
+          innovative solutions to help you get the most out of your gaming
+          experience.
+        </p>
+        <div class="about-cta">
+          <a href="https://discordstatus.com/" target="_blank" class="info-btn"
+            >Our Discord</a
+          >
+        </div>
+      </div>
+    </section>
+
     <!-- Footer -->
     <footer class="footer">
       <div class="footer-container">
         <p>&copy; 2025 Ankropix. All rights reserved.</p>
-        <p>Built with ❤️ for gamers</p>
+        <p>Built with &hearts; for gamers</p>
       </div>
     </footer>
   </body>
