--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
         </a>
         <ul class="nav-links">
           <li>
-            <a href="index.html" class="nav-link active">HOME</a>
+            <a href="index.html" class="nav-link">HOME</a>
           </li>
           <li>
             <a href="services.html" class="nav-link">SERVICES</a>
